--- a/Inicio/css/myCss.css
+++ b/Inicio/css/myCss.css
@@ -12,3 +12,38 @@
 		html, body { padding: 0; margin: 0;}
 
 		body { padding: 20px; }
+
+
+		 .myContainer {
+		        width: 266px;
+		        height: 400px;
+		        float: left;
+		        margin: 10px;
+		        text-align: center;
+		        position: relative;
+		        border-radius: 4px;
+       		    margin-bottom: 14px;
+
+		    }
+		.myImage img {
+
+		        width: 266px;
+		        height: 400px;
+		       	border-radius: 4px;
+
+		}
+		.myContainer img {
+		           display:inline;
+		 }
+		 .myDiv{
+		    padding: 8px 18px;
+
+		 }
+		.caption {
+		    display: block;
+		}
+		.smallAvatar{
+			max-width: 80px;
+    		display: block;
+    		margin: 0 auto;
+		}
